@@ -2,6 +2,7 @@ Unreleased
 	* mergedirs: Add `--keep-going` as synonym for `--continue-on-error`
 	* mergedirs: Add `--ignore-git-worktrees` option (to ignore git worktrees,
 	i.e. directories with `.git` subdirectories)
+	* hashdirs: Add `hashdirs` command to hash a directory tree
 
 Version 0.2 21 Jan 2024 by luispedro
 	* mergedirs: Add `--mtime-ignore-subsecond` flag
